syntax = "proto3";
package lavanet.lava.epochstorage;

import "gogoproto/gogo.proto";
import "lavanet/lava/epochstorage/params.proto";
import "lavanet/lava/epochstorage/stake_storage.proto";
import "lavanet/lava/epochstorage/epoch_details.proto";
import "lavanet/lava/epochstorage/fixated_params.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/lavanet/lava/v4/x/epochstorage/types";

// GenesisState defines the epochstorage module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  repeated StakeStorage stakeStorageList = 2 [(gogoproto.nullable) = false];
  EpochDetails epochDetails = 3;
  repeated FixatedParams fixatedParamsList = 4 [(gogoproto.nullable) = false];
  // this line is used by starport scaffolding # genesis/proto/state
}
